# AutoScraperDB

./: .gitignore  README.md  pyproject.toml
config/: config.py
crawler/: fetcher.py  parser.py
