[project]
name = "autoscraperdb"
version = "0.1.0"
description = ""
authors = [
    {name = "Hsu-Pei-Chun",email = "philsophysis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
